Input fields are cleared on successful transaction

--- a/templates/make_transaction.html
+++ b/templates/make_transaction.html
@@ -131,6 +131,10 @@
             data: JSON.stringify(formData),
             success: function(response) {
               alert('Success: ' + response.message);
+              $('#sender_address').val("");
+              $('#sender_private_key').val("");
+              $('#recipient_address').val("");
+              $('#amount').val("");
             },
             error: function(xhr, status, error) {
               var errorMessage = xhr.status + ': ' + xhr.statusText;
