--- a/templates/view_transactions.html
+++ b/templates/view_transactions.html
@@ -37,5 +37,33 @@
         </div>
       </div>
     </nav>
+
+    <div class="container alert alert-secondary" style="padding-top: 125px;">
+
+      <div class="row">
+        <label class="col-sm-2">Node URL:</label>
+        <div class="col-sm-10">
+          <textarea id="node_url" rows="1" class="form-control">http://127.0.0.1:4000</textarea>
+        </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <input type="button" id="view_transactions" class="btn btn-primary btn-lg" value="View Transactions">
+        </div>
+      </div>
+
+  </div>
+
+
+      <!-- Blockchain Transactions Table -->
+      <div class="container">
+        <table id="transactions_table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+        </table>
+      </div>
+  
+
   </body>
 </html>
