--- a/templates/view_transactions.html
+++ b/templates/view_transactions.html
@@ -11,6 +11,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
+    // CSS styles
+    <style>
+    #transactions_table {
+        width: 100%;
+        table-layout: fixed;
+        word-wrap: break-word;
+    }
+    
+    #transactions_table th, #transactions_table td {
+        padding: 10px;
+        text-align: left;
+        vertical-align: top;
+        border: 1px solid #ddd;
+    }
+    
+    #transactions_table th {
+        background-color: #f2f2f2;
+        font-weight: bold;
+    }
+    
+    .key-cell {
+        font-family: monospace;
+        font-size: 0.9em;
+        white-space: pre-wrap;
+        word-break: break-all;
+    }
+    
+    .amount-cell {
+        text-align: right;
+    }
+    
+    .number-cell {
+        width: 50px;
+        text-align: center;
+        font-weight: bold;
+    }
+    </style>
+    
+
   </head>
   <body>
     <!-- Navigation -->
@@ -58,11 +97,73 @@
   </div>
 
 
-      <!-- Blockchain Transactions Table -->
-      <div class="container">
-        <table id="transactions_table" class="table table-striped table-bordered" cellspacing="0" width="100%">
-        </table>
-      </div>
+  <!-- Blockchain Transactions Table -->
+  <div class="container">
+    <table id="transactions_table" class="table table-striped table-bordered" cellspacing="0" width="100%">
+    </table>
+  </div>
+
+   <!-- Bootstrap core JavaScript -->
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   <script>
+    // JavaScript code
+$(document).ready(function() {
+    $('#view_transactions').click(function() {
+        var node_url = $('#node_url').val().trim();
+        
+        if (!node_url) {
+            alert('Please enter a valid Node URL');
+            return;
+        }
+        
+        $.ajax({
+            url: node_url + '/chain',
+            type: 'GET',
+            success: function(response) {
+                var transactions = [];
+                response.chain.forEach(function(block) {
+                    if (block.transactions && block.transactions.length > 0) {
+                        transactions = transactions.concat(block.transactions);
+                    }
+                });
+                
+                var table = $('#transactions_table');
+                table.empty();
+                
+                if (transactions.length > 0) {
+                    var headerRow = '<thead><tr>' +
+                                    '<th class="number-cell">#</th>' +
+                                    '<th width="35%">Sender</th>' +
+                                    '<th width="35%">Recipient</th>' +
+                                    '<th width="20%">Amount</th>' +
+                                    '</tr></thead>';
+                    table.append(headerRow);
+                    
+                    var tbody = $('<tbody></tbody>');
+                    transactions.forEach(function(tx, index) {
+                        var row = '<tr>' +
+                                  '<td class="number-cell">' + (index + 1) + '</td>' +
+                                  '<td class="key-cell">' + tx.sender + '</td>' +
+                                  '<td class="key-cell">' + tx.recipient + '</td>' +
+                                  '<td class="amount-cell">' + tx.amount + '</td>' +
+                                  '</tr>';
+                        tbody.append(row);
+                    });
+                    table.append(tbody);
+                } else {
+                    table.append('<tr><td colspan="4">No transactions found</td></tr>');
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error('Error fetching blockchain data:', error);
+                alert('Error fetching blockchain data. Please check the console for details.');
+            }
+        });
+    });
+});
+   </script>
+
+
   
 
   </body>
