--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Wallet Generator
-                <span class="sr-only">(current)</span>
-              </a>
+              <a class="nav-link" href="/">Wallet Generator</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/make/transaction">Make Transaction</a>
