--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/make/transaction">Make Transaction</a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/mine_template">Mine</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
             </li>
