--- a/templates/make_transaction.html
+++ b/templates/make_transaction.html
@@ -16,8 +16,8 @@
 
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+     <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Blockchain Client</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Wallet Generator</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Wallet Generator
-              </a>
+              <a class="nav-link" href="/make/transaction">Make Transaction</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/make/transaction">Make Transaction</a>
-              <span class="sr-only">(current)</span>
+              <a class="nav-link" href="/mine_template">Mine</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
@@ -40,6 +41,7 @@
         </div>
       </div>
     </nav>
+
 
 
     <div class="container">
