--- a/templates/view_transactions.html
+++ b/templates/view_transactions.html
@@ -10,8 +10,6 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
-
-    // CSS styles
     <style>
     #transactions_table {
         width: 100%;
@@ -61,13 +59,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Wallet Generator</a>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Wallet Generator
-              </a>
+              <a class="nav-link" href="/make/transaction">Make Transaction</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/make/transaction">Make Transaction</a>
-              <span class="sr-only">(current)</span>
+              <a class="nav-link" href="/mine_template">Mine</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
@@ -76,6 +75,7 @@
         </div>
       </div>
     </nav>
+
 
     <div class="container alert alert-secondary" style="padding-top: 125px;">
 
