--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/configure">Config</a>
+            </li>
           </ul>
         </div>
       </div>
