--- a/templates/make_transaction.html
+++ b/templates/make_transaction.html
@@ -16,8 +16,9 @@
 
   <body>
 
-     <!-- Navigation -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Blockchain Client</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,12 +38,13 @@
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/configure">Config</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-
-
 
     <div class="container">
       <div class="row">
