--- a/templates/mine_template.html
+++ b/templates/mine_template.html
@@ -46,8 +46,9 @@
     </style>
   </head>
   <body>
-     <!-- Navigation -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Blockchain Client</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,11 +68,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/configure">Config</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
-
+    
     <div class="container" style="margin-top: 80px;">
       <h2>Pending Transactions</h2>
       <div class="row">
