--- a/templates/view_transactions.html
+++ b/templates/view_transactions.html
@@ -50,6 +50,7 @@
 
   </head>
   <body>
+  
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
@@ -70,6 +71,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/view/transactions">View Transactions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/configure">Config</a>
             </li>
           </ul>
         </div>
